buildscript {
    repositories {
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7.+'
    }
}

plugins {
    id 'net.minecraftforge.gradle' version '5.+'
}


group = 'miku'
version = ''

java {
    archivesBaseName = '!!!MikuLib'
    toolchain.languageVersion = JavaLanguageVersion.of(8)
}

minecraft {
    mappings channel: 'stable', version: '39-1.12'
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                mikulib {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'


            mods {
                mikulib {
                    source sourceSets.main
                }
            }
        }
    }

}

sourceSets {
    main {
        resources {
            srcDir 'src/generated/resources'
        }
        java {
            //exclude 'net/minecraft/**'
            //exclude 'net/minecraftforge/**'
        }
    }
}

repositories {
    maven {
        name = "forge"
        url = "https://files.minecraftforge.net/maven"
    }

    maven { url = "https://repo.spongepowered.org/maven" }
    mavenCentral()
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
    implementation fileTree(dir: 'libs', includes: ['*jar'])
    implementation files("${System.getProperty('java.home')}/../lib/tools.jar")
    implementation('org.spongepowered:mixin:0.8.5-SNAPSHOT') {
        exclude module: 'guava'
        exclude module: 'commons-io'
        exclude module: 'gson'
    }

    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'com.google.code.gson:gson:2.10'

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    testAnnotationProcessor 'org.spongepowered:mixin:0.8.5-SNAPSHOT:processor'

}
jar {
    manifest {
        attributes([
                "Specification-Title"     : "mikulib",
                "Specification-Vendor"    : "mcst12345",
                "Specification-Version"   : "1.10",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "mcst12345",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")

        ])
        attributes([
                'ForceLoadAsMod'             : 'true',
                "FMLCorePlugin"              : "miku.lib.common.core.MikuCore",
                "FMLCorePluginContainsFMLMod": "true"
        ])
    }
    from{
    }
}

jar.finalizedBy('reobfJar')

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'org.spongepowered.mixin'

mixin {
    disableOverwriteChecker = true
    config "mixins.mikulib.json"
    config "mixins.minecraft.json"
    config "mixins.forge.json"
}